refs task [FE] Create Agency Interface

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     <div class="swiper-wrapper" id="swiper-wrapper5">
                         <div class="swiper-slide" id="swiper1__slide1__section5">
                             <div class="swiper-slide__image1">
-                                <img src="./assets/images/Rectangle 178.svg" class="img2">
+                                <img src="./assets/images/Rectangle 171.svg" class="img2">
                             </div>
                             <div class="swiper-slide__icon__design1">
                                 <div class="swiper-slide__icon1"></div>
@@ -301,7 +301,7 @@
 
                         <div class="swiper-slide" id="swiper1__slide1__section5">
                             <div class="swiper-slide__image1">
-                                <img src="./assets/images/Rectangle 178.svg" class="img2">
+                                <img src="./assets/images/Rectangle 184.svg" class="img2">
                             </div>
                             <div class="swiper-slide__icon__design1">
                                 <div class="swiper-slide__icon1"></div>
@@ -314,19 +314,19 @@
 
                         <div class="swiper-slide" id="swiper1__slide1__section5">
                             <div class="swiper-slide__image1">
-                                <img src="./assets/images/Rectangle 178.svg" class="img2">
+                                <img src="./assets/images/Rectangle 185.svg" class="img2">
                             </div>
                             <div class="swiper-slide__icon__design2">
                                 <div class="swiper-slide__icon2"></div>
-                                <div class="swiper-slide__design2">Design Interior</div>
+                                <div class="swiper-slide__design2">Design Architecture</div>
 
                             </div>
-                            <div class="swiper-slide__library2">Library Room Design</div>
+                            <div class="swiper-slide__library2">Building Design</div>
 
                         </div>
                         <div class="swiper-slide" id="swiper1__slide1__section5">
                             <div class="swiper-slide__image1">
-                                <img src="./assets/images/Rectangle 178.svg" class="img2">
+                                <img src="./assets/images/Rectangle 171.svg" class="img2">
                             </div>
                             <div class="swiper-slide__icon__design1">
                                 <div class="swiper-slide__icon1"></div>
@@ -339,7 +339,7 @@
 
                         <div class="swiper-slide" id="swiper1__slide1__section5">
                             <div class="swiper-slide__image1">
-                                <img src="./assets/images/Rectangle 178.svg" class="img2">
+                                <img src="./assets/images/Rectangle 184.svg" class="img2">
                             </div>
                             <div class="swiper-slide__icon__design1">
                                 <div class="swiper-slide__icon1"></div>
