--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 <a class="nav-link" id="nav-journal" href="#container__section3">JOURNAL</a>
                             </li>
                             <li class="nav-item" id="nav-service">
-                                <a class="nav-link" href="#">SERVICE</a>
+                                <a class="nav-link" href="#container__section5">SERVICE</a>
                             </li>
                             <li class="nav-item" id="nav-work">
                                 <a class="nav-link" href="#container__section4">OUR WORK</a>
@@ -210,7 +210,7 @@
                     </div>
                 </div>
 
-                <div class="swiper-container mySwiper" id="#container__section4">
+                <div class="swiper-container mySwiper" id="container__section4">
                     <div class="container__section4__title">
                         Our <span class="underline-slide" style="text-decoration: underline;">Work</span>
                     </div>
@@ -281,7 +281,7 @@
                     <p class="count__number1"></p>
                 </div>
 
-                <div class="swiper-container swiper" id="#container__section5">
+                <div class="swiper-container swiper" id="container__section5">
                     <div class="container__section5__title">
                         Our <span class="underline-slide" style="text-decoration: underline;">Service</span>
                     </div>
