refs task [FE] Create Agency Interface

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./assets/style/foptimal.css">
-    <link rel="stylesheet" href="./assets/style/ressponsive.css">
+    <link rel="stylesheet" href="./assets/style/responsive.css">
 
     <link rel="stylesheet" href="./assets/style/foptimal.js">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
@@ -59,8 +59,7 @@
                             <li class="nav-item" id="nav-work">
                                 <a class="nav-link" href="#container__section4">OUR WORK</a>
                             </li>
-
-                            <li class="nav-item" id="nav-btn">
+                            <li class="nav-item">
                                 <button type="button" class="btn btn-outline-light">
                                     CONTACT US
                                 </button>
@@ -87,7 +86,7 @@
         <menu class="main__footer">
             <main class="main__section">
                 <div class="container" id="container__section2">
-                    <div class="row">
+                    <div class="row" id="section2__row1">
                         <div class="col-sm-6 text__right" id="text__right1">
                             <div class="about__flex">
                                 <div class="about" href="#">About</div>
@@ -114,7 +113,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="row" id="section2__row1">
                         <div class="col-sm-6 text-left1" id="text__left1">
                             <img class="text__left__image1" src="./assets/images/Rectangle 170dep.svg" alt="">
                             <img class="text__left__image2" src="./assets/images/Rectangle 172.svg" alt="">
@@ -127,6 +126,7 @@
                                 </div>
                                 <div class="our" href="#">Our Team</div>
                             </div>
+
                             <div class="text-left__1">
                                 <h2>
                                     <u>We Work</u> with the great<br>team.
@@ -369,6 +369,7 @@
                     <div class="container__footer__line">
                     </div>
                     <div class="row" id="container__row__column">
+
                         <div class="col-sm-2" id="foptimal">
                             <div class="c__icon">©</div>
                             <div class="footer__foptimal">FOptimal</div>
@@ -390,9 +391,9 @@
 
                         </div>
 
-                        <div class="col-sm-2" id="getin__touch">
+                        <div class="    " id="getin__touch">
                             <button type="button" class="btn btn-outline-light">
-                                <a>GET IN TOUCH</a>
+                                GET IN TOUCH
                             </button>
                         </div>
                     </div>
