refs task [FE] Create Agency Interface

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
                         </div>
 
-                        <div class="    " id="getin__touch">
+                        <div class="col-sm-2" id="getin__touch">
                             <button type="button" class="btn btn-outline-light">
                                 GET IN TOUCH
                             </button>
