--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             </li>
                             <li class="nav-item">
                                 <button type="button" class="btn btn-outline-light">
-                                    CONTACT US
+                                  <a  class="contact">  CONTACT US</a> 
                                 </button>
                             </li>
 
@@ -393,7 +393,7 @@
 
                         <div class="col-sm-2" id="getin__touch">
                             <button type="button" class="btn btn-outline-light">
-                                GET IN TOUCH
+                               <a  class="get"> GET IN TOUCH</a> 
                             </button>
                         </div>
                     </div>
