refs task [FE] create Agency page

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                                 <a class="nav-link" href="#container__section4">OUR WORK</a>
                             </li>
                             <li class="nav-item">
-                                <button type="button" class="btn btn-outline-light">
-                                  <a  class="contact">  CONTACT US</a> 
+                                <button type="button" type="submit">
+                                  <a  class="contact">   CONTACT US</a> 
                                 </button>
                             </li>
 
@@ -113,7 +113,7 @@
                         </div>
                     </div>
 
-                    <div class="row" id="section2__row1">
+                    <div class="row" id="section2__row2">
                         <div class="col-sm-6 text-left1" id="text__left1">
                             <img class="text__left__image1" src="./assets/images/Rectangle 170dep.svg" alt="">
                             <img class="text__left__image2" src="./assets/images/Rectangle 172.svg" alt="">
@@ -129,7 +129,8 @@
 
                             <div class="text-left__1">
                                 <h2>
-                                    <u>We Work</u> with the great<br>team.
+                                    <span style="text-decoration: underline;">We Work</span> with the great team.
+
                                 </h2>
                             </div>
 
@@ -139,7 +140,6 @@
                                 </h3>
                             </div>
                         </div>
-
 
                     </div>
                 </div>
@@ -226,7 +226,7 @@
 
                         </div>
 
-                        <div class="swiper-slide" id="swiper2__slide2__section4">
+                        <div class="swiper-slide" id="swiper1__slide1__section4">
                             <div class="swiper-slide-overlay"></div>
                             <div class="swiper-slide-details fadeIn-bottom">
                                 <h3 class="swiper-slide-title">Design Interior</h3>
@@ -237,7 +237,7 @@
 
                         </div>
 
-                        <div class="swiper-slide" id="swiper3__slide3__section4">
+                        <div class="swiper-slide" id="swiper1__slide1__section4">
                             <div class="swiper-slide-overlay"></div>
                             <div class="swiper-slide-details fadeIn-bottom">
                                 <h3 class="swiper-slide-title">Design Interior</h3>
@@ -248,7 +248,7 @@
 
                         </div>
 
-                        <div class="swiper-slide" id="swiper3__slide3__section4">
+                        <div class="swiper-slide" id="swiper1__slide1__section4">
                             <div class="swiper-slide-overlay"></div>
                             <div class="swiper-slide-details fadeIn-bottom">
                                 <h3 class="swiper-slide-title">Design Interior</h3>
@@ -259,7 +259,7 @@
                         </div>
 
 
-                        <div class="swiper-slide" id="swiper3__slide3__section4">
+                        <div class="swiper-slide" id="swiper1__slide1__section4">
                             <div class="swiper-slide-overlay"></div>
                             <div class="swiper-slide-details fadeIn-bottom">
                                 <h3 class="swiper-slide-title">Design Interior</h3>
@@ -272,7 +272,7 @@
 
                     </div>
                     <div class="swiper-pagination" id="pagination1">
-                        <span class="swiper-pagination-bullet swiper-pagination-bullet-active" id="0" tabindex="0" role="button" aria-label="Go to slide 1"></span>
+                        <span class="swiper-pagination-bullet swiper-pagination-bullet-active" id="hidden__id" tabindex="0" role="button" aria-label="Go to slide 1"></span>
                         <span class="swiper-pagination-bullet" id="1" tabindex="1" role="button" aria-label="Go to slide 2"></span>
                         <span class="swiper-pagination-bullet" id="2" tabindex="2" role="button" aria-label="Go to slide 3"></span>
                         <span class="swiper-pagination-bullet" id="3" tabindex="3" role="button" aria-label="Go to slide 4"></span>
@@ -349,6 +349,18 @@
                             <div class="swiper-slide__library1">Rest Room Design</div>
 
                         </div>
+                        <div class="swiper-slide" id="swiper1__slide1__section5">
+                            <div class="swiper-slide__image1">
+                                <img src="./assets/images/Rectangle 184.svg" class="img2">
+                            </div>
+                            <div class="swiper-slide__icon__design1">
+                                <div class="swiper-slide__icon1"></div>
+                                <div class="swiper-slide__design1">Design Interior</div>
+
+                            </div>
+                            <div class="swiper-slide__library1">Rest Room Design</div>
+
+                        </div>
 
 
 
@@ -392,7 +404,7 @@
                         </div>
 
                         <div class="col-sm-2" id="getin__touch">
-                            <button type="button" class="btn btn-outline-light">
+                            <button type="button">
                                <a  class="get"> GET IN TOUCH</a> 
                             </button>
                         </div>
