--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a class="navbar-brand" href="#">
                         FOtimal
                     </a>
-                    <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler m-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
@@ -125,6 +125,7 @@
                                 <div class="line__2">
                                 </div>
                                 <div class="our" href="#">Our Team</div>
+
                             </div>
 
                             <div class="text-left__1">
@@ -209,7 +210,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="swiper-container mySwiper" id="container__section4">
                     <div class="container__section4__title">
                         Our <span class="underline-slide" style="text-decoration: underline;">Work</span>
