--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                     <a class="navbar-brand" href="#">
                         FOtimal
                     </a>
-                    <button class="navbar-toggler m-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
-                        <ul class="navbar-nav">
+                        <ul class="navbar-nav ">
                             <li class="nav-item" id="nav-about">
                                 <a class="nav-link" href="#container__section2">ABOUT</a>
                             </li>
