--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <header>
             <!-- Main navigation -->
             <div class="view">
-                <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+                <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar">
                     <a class="navbar-brand" href="#">
-                        FOtimal
+                        FOptimal
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -73,9 +73,9 @@
                     <div class="container">
                         <div class="row wow fadeIn">
                             <div class="col-md-12 white-text text-center wow fadeIn">
-                                <h3 class="display-3">Passionate about Design <u><i>Interior</i></u>. </h3>
+                                <h3 class="display-3">Passionate about Design <span>Interior.</span></h3>
                                 <h4 class="subtext-header">Industrial style interior for a young married couple.</h4>
-                                <h5 div class="text__center">DISCOVER MORE
+                                <h5 div class="text__center">DISCOVER MORE</h5>
                             </div>
                         </div>
                     </div>
