refs task [FE] Create Agency Page

--- a/index.html
+++ b/index.html
@@ -427,7 +427,8 @@
 
                             <div class="icon__boulevard">
                                     <a href="#" class="place">
-                                        <span class="place__icon">© </span>
+                                        <!-- <span class="place__icon"><i class="fa fa-map-marker text-white" aria-hidden="true"></i></span> -->
+                                        <img src="./assets/images/Subtract.svg">
                                         <span class="boulevard">Boulevard Audent 18 6000 Charleroi Belgique</span>
                                     </a>
                             </div>
