refs task[FE] Create Agency Page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
     <div class="container-fruid">
-        <header>
+        <header id="header">
             <div class="container__header__image">
                 <img class="full__header__image>" src="./assets/images/Hero background.svg">
 
@@ -408,25 +408,25 @@
                     </div> 
                     <div class="footer__row">
                              <div class="foptimal">
-                                    <a href="#" class="addres">
+                                    <a href="#header" class="addres">
                                         <span class="foptimal__footer">FOptimal</span>
                                         <span class="foptimal__icon">© </span>
                                     </a>
                             </div>
 
                             <div class="about__jurnalt">
-                                <a class="about__footer">About</a>
-                                <a class="jurnalt__footer">Jurnalt</a>
+                                <a class="about__footer" href="#container__section2">About</a>
+                                <a class="jurnalt__footer" href="#container__section3">Jurnalt</a>
                             </div>
 
 
                             <div class="service__work">
-                                <a class="service">Services </a>
-                                <a class="work">Our Work <a>
+                                <a class="service" href="#container__section5">Services </a>
+                                <a class="work" href="#container__section4">Our Work <a>
                           </div>
 
                             <div class="icon__boulevard">
-                                    <a href="#" class="place">
+                                    <a href="https://wiicamp.com/about" class="place">
                                         <!-- <span class="place__icon"><i class="fa fa-map-marker text-white" aria-hidden="true"></i></span> -->
                                         <img src="./assets/images/Subtract.svg">
                                         <span class="boulevard">Boulevard Audent 18 6000 Charleroi Belgique</span>
