refs task [FE] Create Agency page

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                             <h3 class="swiper-slide-title">Design Interior</h3>
                         </div>
                         <div class="swiper__slide__image">
-                            <img src="./assets/images/Rectangle 178.svg">
+                            <img src="https://lh3.googleusercontent.com/iuGR7v20fSLoPYUcWfbEj7C42msjv-6gl0oe3mCmOFbQDOUWuzh17L4X8p0jN9WvrW8ry9CK3TCur6Sc3u6V6szk5TgRGita002EphhFpxCSHCJzsgySl6RQZ_MVRyf9PTKODo8uozjUPSBFNsmucnBNQUra2PH_Iy35aQ8tB-9uCnnOuin1Hx_PBdoVpO7-4VNK67m-Izu5YfKHktgZv1bC9SCHGDpk2EFMnDJkM2ANKp9DTNbreLBV7oAOxq6m3xtD9t1hF20RKQX5i0cbsj14MIm4O8RvI7wUzzzv4cOvUMuSxeXyLmUTKoYbHPStXM8ADBguSqs-mCIljKDN6PEYNMJxrAlhuceN-3aRqvF9VFWx1t-I_gZGdIrraZzjNdzrymbsx2LJBiE4V1c7_lYqr7pITYaHnwDnp0sIhlF9Qidy_2pvxvoGm9yZX76vrNZ78aI43-MIwGWsQ5hVouurwR0qvQo_nOh42IFI8yod8-IjAGcXO6Rajzze8ub1oDBvMxTt7jMSOOCB0aaUOVvz1i4-qV1czFAnSaQcyEf02iOr2-E9w4Fv9flvRjFncqyDes-dITkZTA3esQjdjsFXmai-9-2PS3VpErk=w864-h648-no">
                         </div>
                     </div>
 
@@ -277,7 +277,7 @@
                             <h3 class="swiper-slide-title">Design Interior</h3>
                         </div>
                         <div class="swiper__slide__image">
-                            <img src="./assets/images/Rectangle 179.svg">
+                            <img src="https://noithattrevietnam.com/uploaded/Kien-thuc-nha-dep/thiet-ke-noi-that-nha-bep/thiet-ke-noi-that-nha-bep-1.jpg">
                         </div>
 
                     </div>
@@ -338,7 +338,7 @@
                     </div>
                     <div class="swiper-slide" id="swiper1__slide1__section5">
                         <div class="swiper-slide__image1">
-                            <img src="./assets/images/Rectangle 171.svg" class="img2">
+                            <img src="https://ytuongnhadep.vn/Images/image/1-thiet-ke-nha-biet-thu-sang-trong-ven-bien/thiet-ke-nha-biet-thu-sang-trong-ven-bien-5.jpg" class="img2">
                         </div>
                         <div class="swiper-slide__icon__design1">
                             <div class="swiper-slide__icon1"></div>
@@ -351,7 +351,7 @@
 
                     <div class="swiper-slide" id="swiper1__slide1__section5">
                         <div class="swiper-slide__image1">
-                            <img src="./assets/images/Rectangle 184.svg" class="img2">
+                            <img src="https://image-us.eva.vn/upload/4-2019/images/2019-11-20/1574236472-7fe8675e9eb3e0f322f36c0fda4567a5.jpg" class="img2">
                         </div>
                         <div class="swiper-slide__icon__design1">
                             <div class="swiper-slide__icon1"></div>
