refs task [FE] Create Agency Page

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                             <div class="text-right__2">
                                 <p>
-                                    <u><i>Furniture Optimal</i></u> stands out among property<br> agencies, and offers a
+                                    <span>Furniture Optimal</span> stands out among property<br> agencies, and offers a
                                     wide
                                     range of creative and<br> strategic services for brands,<br> companies, foundations
                                     and other remarkable<br> organizations.
@@ -165,7 +165,7 @@
 
                             <div class="text-left__2">
                                 <h3>
-                                    <u><i>Furniture Optimal</i></u> isn’t just a team — it’s a family. We all share the
+                                    <span>Furniture Optimal</span> isn’t just a team — it’s a family. We all share the
                                     same
                                     vision here: to push ideas all the way, without taking ourselves too seriously, and
                                     overcoming challenges together.
