refs task [FE] Create Agency Page

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                             <div class="text-right__2">
                                 <p>
-                                    <span>Furniture Optimal</span> stands out among property<br> agencies, and offers a
+                                    <span class="font-italic">Furniture Optimal</span> stands out among property<br> agencies, and offers a
                                     wide
                                     range of creative and<br> strategic services for brands,<br> companies, foundations
                                     and other remarkable<br> organizations.
@@ -295,11 +295,11 @@
 
                 </div>
                 <div class="swiper-pagination" id="pagination1">
-                    <span class="swiper-pagination-bullet swiper-pagination-bullet-active" id="hidden__id" tabindex="0" role="button" aria-label="Go to slide 1"></span>
-                    <span class="swiper-pagination-bullet" id="1" tabindex="1" role="button" aria-label="Go to slide 2"></span>
-                    <span class="swiper-pagination-bullet" id="2" tabindex="2" role="button" aria-label="Go to slide 3"></span>
-                    <span class="swiper-pagination-bullet" id="3" tabindex="3" role="button" aria-label="Go to slide 4"></span>
-                    <span class="swiper-pagination-bullet" id="4" tabindex="4" role="button" aria-label="Go to slide 5"></span>
+                    <span class="swiper-pagination-bullet swiper-pagination-bullet-active pagination__click" id="hidden__id" tabindex="0" role="button" aria-label="Go to slide 1"></span>
+                    <span class="swiper-pagination-bullet pagination__click" id="1" tabindex="1" role="button" aria-label="Go to slide 2"></span>
+                    <span class="swiper-pagination-bullet pagination__click" id="2" tabindex="2" role="button" aria-label="Go to slide 3"></span>
+                    <span class="swiper-pagination-bullet  pagination__click" id="3" tabindex="3" role="button" aria-label="Go to slide 4"></span>
+                    <span class="swiper-pagination-bullet pagination__click" id="4" tabindex="4" role="button" aria-label="Go to slide 5"></span>
                 </div>
                 <p class="count__number1"></p>
             </div>
